# customer-support-openenv

./: .gitignore  Dockerfile  Dockerfile.mujoco  OPENENV.md  README.md  client.py  inference.py  models.py  openenv-mujoco.yaml  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
customer_support_env/: __init__.py  _bootstrap.py  baseline.py  catalog.py  client.py  environment.py  models.py
customer_support_env/server/: __init__.py  app.py  customer_support_environment.py
customer_support_env/tasks/: catalog.json
docs/: ENVIRONMENT_DESIGN.md
drug_discovery_env/: __init__.py  _bootstrap.py  baseline.py  catalog.py  chemistry.py  client.py  environment.py  models.py
drug_discovery_env/server/: __init__.py  app.py  drug_discovery_environment.py
drug_discovery_env/tasks/: catalog.json
mujoco_gym_env/: __init__.py  baseline.py  client.py  environment.py  models.py
mujoco_gym_env/server/: __init__.py  app.py  mujoco_gym_environment.py
scripts/: run_baseline.py  smoke_mujoco_gym.py
server/: __init__.py  app.py  customer_support_environment.py
tests/: conftest.py  test_environment.py  test_strict_scores.py
