[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-gym-openenv"
version = "1.0.0"
description = "OpenEnv MuJoCo continuous-control suite (Gymnasium v5): pendulum, hopper, half-cheetah, FastAPI server, deterministic grader."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.115.0",
  "openai>=1.66.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.0",
  "uvicorn>=0.34.0",
  "gymnasium[mujoco]>=1.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
server = "mujoco_gym_env.server.app:main"
mujoco-gym-server = "mujoco_gym_env.server.app:main"
mujoco-gym-baseline = "mujoco_gym_env.baseline:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mujoco_gym_env*"]
